--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>سیستم مسابقات فوتسال</title>
-
   <style>
     body {
       font-family: "Vazir", sans-serif;
@@ -83,6 +82,102 @@
     }
 
     /* ------------------- کارت‌ها ------------------- */
+    .card-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin: 40px auto;
+      max-width: 1000px;
+    }
+
+    .card {
+      background: #ffffff;
+      border-radius: 14px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      width: 280px;
+      padding: 18px;
+      text-align: center;
+      transition: all 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.15);
+    }
+
+    .teams {
+      font-size: 18px;
+      font-weight: bold;
+      color: #3f51b5;
+      margin-bottom: 8px;
+    }
+
+    .divider {
+      font-size: 20px;
+      margin: 0 6px;
+      color: #444;
+    }
+
+    .match-info, .result-info {
+      font-size: 14px;
+      color: #555;
+      margin-top: 6px;
+    }
+
+    .goal-scorer {
+      font-size: 13px;
+      margin-top: 6px;
+      color: #333;
+      text-align: right;
+      line-height: 1.6;
+    }
+
+    .cards {
+      margin-top: 6px;
+      font-size: 18px;
+    }
+
+    /* ------------------- جداول کوچک ------------------- */
+    .effective-container {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin: 50px auto;
+      max-width: 1000px;
+    }
+
+    .mini-table {
+      width: 300px;
+      background: #fff;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 12px;
+      overflow: hidden;
+      font-size: 13px;
+    }
+
+    .mini-table caption {
+      background: #3f51b5;
+      color: white;
+      font-weight: bold;
+      padding: 10px;
+      font-size: 15px;
+    }
+
+    .mini-table th, .mini-table td {
+      padding: 6px;
+      border: 1px solid #ddd;
+      text-align: center;
+    }
+
+    .mini-table th {
+      background: #f3f3f3;
+      color: #222;
+      font-weight: bold;
+    }
+
+    /* ------------------- کارت تیم‌ها ------------------- */
     .team-card-container {
       display: flex;
       flex-wrap: wrap;
@@ -128,28 +223,8 @@
       padding: 10px;
       background: #f4f4f4;
       border-radius: 10px;
+      white-space: pre-line;
     }
-
-    /* بقیه کارت‌ها */
-    .card-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin: 40px auto;
-      max-width: 1000px;
-    }
-
-    .card {
-      background: #ffffff;
-      border-radius: 14px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      width: 280px;
-      padding: 18px;
-      text-align: center;
-      transition: all 0.3s ease;
-    }
-
   </style>
 </head>
 <body>
@@ -162,11 +237,11 @@
     <button class="tab-btn" onclick="showTab('teamsTab')">👥 تیم‌های ثبت‌نامی</button>
   </div>
 
-  <!-- تب ۱ فقط همانی که بود -->
   <div id="rankingTab" class="tab-content active">
-
+    <!-- جدول رده‌بندی -->
     <table id="rankingTable" class="modern-table"></table>
 
+    <!-- بازی‌های آینده، نتایج بازی‌ها و بازیکنان مؤثر فقط برای تب جدول رده‌بندی -->
     <h2>📅 بازی‌های آینده</h2>
     <div id="matches" class="card-container"></div>
 
@@ -195,55 +270,145 @@
     </div>
   </div>
 
-  <!-- تب ۲ دقیقا همان ظاهر قبلی: فقط کارت تیم‌ها -->
+  <!-- تب ۲: تیم‌های ثبت‌نامی - فقط کارت تیم‌ها -->
   <div id="teamsTab" class="tab-content">
     <h2>👥 تیم‌های ثبت‌نامی</h2>
     <div id="teamCards" class="team-card-container"></div>
   </div>
 
+  <script>
+    /* لینک‌ها */
+    const rankingUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=0&single=true&output=csv";
+    const matchesUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=1831919756&single=true&output=csv";
+    const resultsUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=1652426007&single=true&output=csv";
+    const effectiveUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=99452363&single=true&output=csv";
 
-<script>
+    /* لینک شیت تیم‌ها */
+    const teamsUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=136534848&single=true&output=csv";
 
-/* لینک‌ها */
-const rankingUrl = "...";
-const matchesUrl = "...";
-const resultsUrl = "...";
-const effectiveUrl = "...";
-const teamsUrl = "...";
-
-/* تب‌ها */
-function showTab(tabId) {
-  document.querySelectorAll(".tab-btn").forEach(b => b.classList.remove("active"));
-  document.querySelectorAll(".tab-content").forEach(t => t.classList.remove("active"));
-  event.target.classList.add("active");
-  document.getElementById(tabId).classList.add("active");
-}
-
-/* ------------------- بارگذاری تیم‌ها (فقط کارت) ------------------- */
-fetch(teamsUrl)
-  .then(r => r.text())
-  .then(csv => {
-    const rows = csv.trim().split("\n").map(r => r.split(","));
-    const container = document.getElementById("teamCards");
-    container.innerHTML = "";
-
-    for (let i = 1; i < rows.length; i++) {
-      const [team, leader, playersRaw] = rows[i].map(x => x.trim());
-      const players = playersRaw ? playersRaw.replace(/;/g, "، ") : "-";
-
-      container.innerHTML += `
-        <div class="team-card">
-          <div class="team-name">${team}</div>
-          <div class="team-leader">سرگروه: ${leader}</div>
-          <div class="team-players">${players}</div>
-        </div>
-      `;
+    /* ------------------- مدیریت تب‌ها ------------------- */
+    function showTab(tabId) {
+      document.querySelectorAll(".tab-btn").forEach(btn => btn.classList.remove("active"));
+      document.querySelectorAll(".tab-content").forEach(tab => tab.classList.remove("active"));
+      event.target.classList.add("active");
+      document.getElementById(tabId).classList.add("active");
     }
-  });
 
-/* بقیه fetchها بدون هیچ تغییری */
+    /* ------------------- جدول رده‌بندی ------------------- */
+    fetch(rankingUrl)
+      .then(res => res.text())
+      .then(csv => {
+        const rows = csv.trim().split("\n").map(r => r.split(","));
+        const table = document.getElementById("rankingTable");
 
-</script>
+        rows.forEach((row, i) => {
+          const tr = document.createElement("tr");
+          row.forEach(cell => {
+            const el = document.createElement(i === 0 ? "th" : "td");
+            el.textContent = cell.trim();
+            tr.appendChild(el);
+          });
+          table.appendChild(tr);
+        });
+      });
 
+    /* ------------------- تیم‌های ثبت‌نامی (نمایش کارت) ------------------- */
+    fetch(teamsUrl)
+      .then(res => res.text())
+      .then(csv => {
+        const rows = csv.trim().split("\n").map(r => r.split(","));
+        const container = document.getElementById("teamCards");
+        // پاک‌سازی قبلی
+        container.innerHTML = "";
+        for (let i = 1; i < rows.length; i++) {
+          const row = rows[i].map(x => x.trim());
+          const team = row[0] || "-";
+          const leader = row[1] || "-";
+          // بازیکنان ممکن است با ; یا ؛ از هم جدا شده باشند. آن‌ها را با ، فارسی جدا کن.
+          const playersRaw = row[2] || "";
+          const players = playersRaw ? playersRaw.replace(/;/g, "، ").replace(/؛/g, "، ") : "-";
+          container.innerHTML += `
+            <div class="team-card">
+              <div class="team-name">${team}</div>
+              <div class="team-leader">سرگروه: ${leader}</div>
+              <div class="team-players">${players}</div>
+            </div>
+          `;
+        }
+      });
+
+    /* ------------------- بازی‌های آینده ------------------- */
+    fetch(matchesUrl)
+      .then(res => res.text())
+      .then(csv => {
+        const rows = csv.trim().split("\n").map(r => r.split(","));
+        const container = document.getElementById("matches");
+
+        for (let i = 1; i < rows.length; i++) {
+          const [team1, team2, date, time] = rows[i];
+          const card = document.createElement("div");
+          card.className = "card";
+          card.innerHTML = `
+            <div class="teams">${team1.trim()} <span class="divider">⚽</span> ${team2.trim()}</div>
+            <div class="match-info">📅 ${date.trim()}</div>
+            <div class="match-info">⏰ ${time.trim()}</div>
+          `;
+          container.appendChild(card);
+        }
+      });
+
+    /* ------------------- نتایج ------------------- */
+    fetch(resultsUrl)
+      .then(res => res.text())
+      .then(csv => {
+        const rows = csv.trim().split("\n").map(r => r.split(","));
+        const container = document.getElementById("results");
+
+        for (let i = 1; i < rows.length; i++) {
+          const [team1, score1, score2, team2, scorers1, scorers2, cards1, cards2] = rows[i];
+          const card = document.createElement("div");
+          card.className = "card";
+          card.innerHTML = `
+            <div class="teams">${team1.trim()} ${score1.trim()} <span class="divider">⚽</span> ${score2.trim()} ${team2.trim()}</div>
+            <div class="result-info goal-scorer"><b>${team1.trim()}:</b> ${scorers1 || "-"}</div>
+            ${cards1 ? `<div class="cards">${cards1.trim()}</div>` : ""}
+            <div class="result-info goal-scorer"><b>${team2.trim()}:</b> ${scorers2 || "-"}</div>
+            ${cards2 ? `<div class="cards">${cards2.trim()}</div>` : ""}
+          `;
+          container.appendChild(card);
+        }
+      });
+
+    /* ------------------- بازیکنان مؤثر ------------------- */
+    fetch(effectiveUrl)
+      .then(res => res.text())
+      .then(csv => {
+        const rows = csv.trim().split("\n").map(r => r.split(","));
+        const scorers = [], assist = [], mvp = [];
+
+        rows.forEach(r => {
+          const type = r[0].trim();
+          if (type === "گلزن") scorers.push(r);
+          else if (type === "پاسور") assist.push(r);
+          else if (type === "موثر") mvp.push(r);
+        });
+
+        const scorersBody = document.querySelector("#topScorers tbody");
+        scorers.slice(0, 3).forEach(r => {
+          scorersBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td></tr>`;
+        });
+
+        const assistBody = document.querySelector("#topAssist tbody");
+        assist.slice(0, 3).forEach(r => {
+          assistBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td></tr>`;
+        });
+
+        const mvpBody = document.querySelector("#topMVP tbody");
+        mvp.slice(0, 3).forEach(r => {
+          mvpBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td><td>${r[4]}</td></tr>`;
+        });
+      });
+
+  </script>
 </body>
 </html>
