--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
     }
 
     .tab-btn {
-      padding: 10px 20px;
+      padding: 12px 26px;
       border: none;
       background: #e0e0e0;
       border-radius: 8px;
       cursor: pointer;
       font-size: 16px;
+      font-family: inherit; /* ensure same font as body */
       transition: 0.3s;
     }
 
@@ -81,7 +82,36 @@
       background: #f5f7ff;
     }
 
-    /* ------------------- کارت‌ها ------------------- */
+    /* ------------------- جداول کوچک (همسان با جدول رده‌بندی) ------------------- */
+    table.mini-table {
+      margin: 25px auto;
+      width: 90%;
+      max-width: 300px;
+      border-collapse: separate;
+      border-spacing: 0;
+      overflow: hidden;
+      border-radius: 14px;
+      background: white;
+      box-shadow: 0 4px 14px rgba(0,0,0,0.08);
+    }
+
+    table.mini-table th {
+      background: #3f51b5;
+      color: white;
+      padding: 12px;
+    }
+
+    table.mini-table td {
+      padding: 10px;
+      border-bottom: 1px solid #eee;
+      text-align: center;
+    }
+
+    table.mini-table tr:hover {
+      background: #f5f7ff;
+    }
+
+    /* ------------------- کارت‌ها برای بازی‌ها و نتایج ------------------- */
     .card-container {
       display: flex;
       flex-wrap: wrap;
@@ -138,93 +168,53 @@
       font-size: 18px;
     }
 
-    /* ------------------- جداول کوچک ------------------- */
-    .effective-container {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin: 50px auto;
-      max-width: 1000px;
-    }
-
-    .mini-table {
-      width: 300px;
-      background: #fff;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      border-radius: 12px;
-      overflow: hidden;
-      font-size: 13px;
-    }
-
-    .mini-table caption {
-      background: #3f51b5;
-      color: white;
-      font-weight: bold;
-      padding: 10px;
-      font-size: 15px;
-    }
-
-    .mini-table th, .mini-table td {
-      padding: 6px;
-      border: 1px solid #ddd;
-      text-align: center;
-    }
-
-    .mini-table th {
-      background: #f3f3f3;
-      color: #222;
-      font-weight: bold;
-    }
-
     /* ------------------- کارت تیم‌ها ------------------- */
     .team-card-container {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 20px;
+      gap: 25px;
       margin: 40px auto;
-      max-width: 1000px;
+      max-width: 1200px;
     }
 
     .team-card {
       background: #ffffff;
       border-radius: 14px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      width: 260px;
-      padding: 18px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+      width: 320px;
+      padding: 22px;
       text-align: center;
       transition: all 0.3s ease;
     }
 
     .team-card:hover {
       transform: translateY(-5px);
-      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.15);
+      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.18);
     }
 
     .team-name {
-      font-size: 18px;
+      font-size: 20px;
       font-weight: bold;
       color: #3f51b5;
-      margin-bottom: 6px;
-    }
-
-    .team-leader {
-      font-size: 14px;
-      color: #444;
       margin-bottom: 10px;
     }
 
-    .team-players {
-      font-size: 13px;
-      line-height: 1.7;
-      color: #555;
-      text-align: right;
-      padding: 10px;
-      background: #f4f4f4;
-      border-radius: 10px;
-      white-space: pre-line;
+    .team-leader {
+      font-size: 15px;
+      margin-bottom: 16px;
     }
+
+    /* بازیکنان هر کدام در ردیف جدا */
+    .player-item {
+      background: #f4f4f4;
+      padding: 8px;
+      border-radius: 10px;
+      margin-bottom: 6px;
+      text-align: center;
+      font-size: 14px;
+    }
+
   </style>
 </head>
 <body>
@@ -237,11 +227,10 @@
     <button class="tab-btn" onclick="showTab('teamsTab')">👥 تیم‌های ثبت‌نامی</button>
   </div>
 
+  <!-- تب ۱: جدول رده‌بندی -->
   <div id="rankingTab" class="tab-content active">
-    <!-- جدول رده‌بندی -->
     <table id="rankingTable" class="modern-table"></table>
 
-    <!-- بازی‌های آینده، نتایج بازی‌ها و بازیکنان مؤثر فقط برای تب جدول رده‌بندی -->
     <h2>📅 بازی‌های آینده</h2>
     <div id="matches" class="card-container"></div>
 
@@ -251,164 +240,154 @@
     <h2>🌟 بازیکنان مؤثر</h2>
     <div class="effective-container">
       <table id="topScorers" class="mini-table">
-        <caption>گل‌زنان برتر</caption>
         <thead><tr><th>بازیکن</th><th>تیم</th><th>گل</th></tr></thead>
         <tbody></tbody>
       </table>
 
       <table id="topAssist" class="mini-table">
-        <caption>پاسورهای برتر</caption>
         <thead><tr><th>بازیکن</th><th>تیم</th><th>پاس گل</th></tr></thead>
         <tbody></tbody>
       </table>
 
       <table id="topMVP" class="mini-table">
-        <caption>بازیکنان مؤثر</caption>
         <thead><tr><th>بازیکن</th><th>تیم</th><th>پست</th><th>رکورد</th></tr></thead>
         <tbody></tbody>
       </table>
     </div>
   </div>
 
-  <!-- تب ۲: تیم‌های ثبت‌نامی - فقط کارت تیم‌ها -->
+  <!-- تب ۲: تیم‌ها -->
   <div id="teamsTab" class="tab-content">
     <h2>👥 تیم‌های ثبت‌نامی</h2>
     <div id="teamCards" class="team-card-container"></div>
   </div>
 
-  <script>
-    /* لینک‌ها */
-    const rankingUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=0&single=true&output=csv";
-    const matchesUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=1831919756&single=true&output=csv";
-    const resultsUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=1652426007&single=true&output=csv";
-    const effectiveUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=99452363&single=true&output=csv";
+<script>
+  /* لینک‌ها */
+  const rankingUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=0&single=true&output=csv";
+  const matchesUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=1831919756&single=true&output=csv";
+  const resultsUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=1652426007&single=true&output=csv";
+  const effectiveUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=99452363&single=true&output=csv";
+  const teamsUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=136534848&single=true&output=csv";
 
-    /* لینک شیت تیم‌ها */
-    const teamsUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=136534848&single=true&output=csv";
+  /* مدیریت تب‌ها */
+  function showTab(tabId) {
+    document.querySelectorAll(".tab-btn").forEach(btn => btn.classList.remove("active"));
+    document.querySelectorAll(".tab-content").forEach(tab => tab.classList.remove("active"));
+    event.target.classList.add("active");
+    document.getElementById(tabId).classList.add("active");
+  }
 
-    /* ------------------- مدیریت تب‌ها ------------------- */
-    function showTab(tabId) {
-      document.querySelectorAll(".tab-btn").forEach(btn => btn.classList.remove("active"));
-      document.querySelectorAll(".tab-content").forEach(tab => tab.classList.remove("active"));
-      event.target.classList.add("active");
-      document.getElementById(tabId).classList.add("active");
-    }
-
-    /* ------------------- جدول رده‌بندی ------------------- */
-    fetch(rankingUrl)
-      .then(res => res.text())
-      .then(csv => {
-        const rows = csv.trim().split("\n").map(r => r.split(","));
-        const table = document.getElementById("rankingTable");
-
-        rows.forEach((row, i) => {
-          const tr = document.createElement("tr");
-          row.forEach(cell => {
-            const el = document.createElement(i === 0 ? "th" : "td");
-            el.textContent = cell.trim();
-            tr.appendChild(el);
-          });
-          table.appendChild(tr);
+  /* جدول رده‌بندی */
+  fetch(rankingUrl)
+    .then(res => res.text())
+    .then(csv => {
+      const rows = csv.trim().split("\n").map(r => r.split(","));
+      const table = document.getElementById("rankingTable");
+      rows.forEach((row, i) => {
+        const tr = document.createElement("tr");
+        row.forEach(cell => {
+          const el = document.createElement(i === 0 ? "th" : "td");
+          el.textContent = cell.trim();
+          tr.appendChild(el);
         });
+        table.appendChild(tr);
       });
+    });
 
-    /* ------------------- تیم‌های ثبت‌نامی (نمایش کارت) ------------------- */
-    fetch(teamsUrl)
-      .then(res => res.text())
-      .then(csv => {
-        const rows = csv.trim().split("\n").map(r => r.split(","));
-        const container = document.getElementById("teamCards");
-        // پاک‌سازی قبلی
-        container.innerHTML = "";
-        for (let i = 1; i < rows.length; i++) {
-          const row = rows[i].map(x => x.trim());
-          const team = row[0] || "-";
-          const leader = row[1] || "-";
-          // بازیکنان ممکن است با ; یا ؛ از هم جدا شده باشند. آن‌ها را با ، فارسی جدا کن.
-          const playersRaw = row[2] || "";
-          const players = playersRaw ? playersRaw.replace(/;/g, "، ").replace(/؛/g, "، ") : "-";
-          container.innerHTML += `
-            <div class="team-card">
-              <div class="team-name">${team}</div>
-              <div class="team-leader">سرگروه: ${leader}</div>
-              <div class="team-players">${players}</div>
-            </div>
-          `;
-        }
+  /* تیم‌ها - کارت‌ها با اعضای جدا */
+  fetch(teamsUrl)
+    .then(res => res.text())
+    .then(csv => {
+      const rows = csv.trim().split("\n").map(r => r.split(","));
+      const container = document.getElementById("teamCards");
+      container.innerHTML = "";
+      for (let i = 1; i < rows.length; i++) {
+        const row = rows[i].map(x => x.trim());
+        const team = row[0] || "-";
+        const leader = row[1] || "-";
+        const playersRaw = row[2] || "";
+        const players = playersRaw ? playersRaw.split(/;|؛/) : [];
+        let playersHTML = players
+          .map(p => `<div class="player-item">${p.trim()}</div>`)
+          .join("");
+        container.innerHTML += `
+          <div class="team-card">
+            <div class="team-name">${team}</div>
+            <div class="team-leader">سرگروه: ${leader}</div>
+            ${playersHTML}
+          </div>
+        `;
+      }
+    });
+
+  /* بازی‌های آینده */
+  fetch(matchesUrl)
+    .then(res => res.text())
+    .then(csv => {
+      const rows = csv.trim().split("\n").map(r => r.split(","));
+      const container = document.getElementById("matches");
+      for (let i = 1; i < rows.length; i++) {
+        const [team1, team2, date, time] = rows[i];
+        const card = document.createElement("div");
+        card.className = "card";
+        card.innerHTML = `
+          <div class="teams">${team1.trim()} <span class="divider">⚽</span> ${team2.trim()}</div>
+          <div class="match-info">📅 ${date.trim()}</div>
+          <div class="match-info">⏰ ${time.trim()}</div>
+        `;
+        container.appendChild(card);
+      }
+    });
+
+  /* نتایج بازی‌ها */
+  fetch(resultsUrl)
+    .then(res => res.text())
+    .then(csv => {
+      const rows = csv.trim().split("\n").map(r => r.split(","));
+      const container = document.getElementById("results");
+      for (let i = 1; i < rows.length; i++) {
+        const [team1, score1, score2, team2, scorers1, scorers2, cards1, cards2] = rows[i];
+        const card = document.createElement("div");
+        card.className = "card";
+        card.innerHTML = `
+          <div class="teams">${team1.trim()} ${score1.trim()} <span class="divider">⚽</span> ${score2.trim()} ${team2.trim()}</div>
+          <div class="result-info goal-scorer"><b>${team1.trim()}:</b> ${scorers1 || "-"}</div>
+          ${cards1 ? `<div class="cards">${cards1.trim()}</div>` : ""}
+          <div class="result-info goal-scorer"><b>${team2.trim()}:</b> ${scorers2 || "-"}</div>
+          ${cards2 ? `<div class="cards">${cards2.trim()}</div>` : ""}
+        `;
+        container.appendChild(card);
+      }
+    });
+
+  /* بازیکنان مؤثر */
+  fetch(effectiveUrl)
+    .then(res => res.text())
+    .then(csv => {
+      const rows = csv.trim().split("\n").map(r => r.split(","));
+      const scorers = [], assist = [], mvp = [];
+      rows.forEach(r => {
+        const type = r[0].trim();
+        if (type === "گلزن") scorers.push(r);
+        else if (type === "پاسور") assist.push(r);
+        else if (type === "موثر") mvp.push(r);
       });
-
-    /* ------------------- بازی‌های آینده ------------------- */
-    fetch(matchesUrl)
-      .then(res => res.text())
-      .then(csv => {
-        const rows = csv.trim().split("\n").map(r => r.split(","));
-        const container = document.getElementById("matches");
-
-        for (let i = 1; i < rows.length; i++) {
-          const [team1, team2, date, time] = rows[i];
-          const card = document.createElement("div");
-          card.className = "card";
-          card.innerHTML = `
-            <div class="teams">${team1.trim()} <span class="divider">⚽</span> ${team2.trim()}</div>
-            <div class="match-info">📅 ${date.trim()}</div>
-            <div class="match-info">⏰ ${time.trim()}</div>
-          `;
-          container.appendChild(card);
-        }
+      const scorersBody = document.querySelector("#topScorers tbody");
+      scorers.slice(0, 3).forEach(r => {
+        scorersBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td></tr>`;
       });
-
-    /* ------------------- نتایج ------------------- */
-    fetch(resultsUrl)
-      .then(res => res.text())
-      .then(csv => {
-        const rows = csv.trim().split("\n").map(r => r.split(","));
-        const container = document.getElementById("results");
-
-        for (let i = 1; i < rows.length; i++) {
-          const [team1, score1, score2, team2, scorers1, scorers2, cards1, cards2] = rows[i];
-          const card = document.createElement("div");
-          card.className = "card";
-          card.innerHTML = `
-            <div class="teams">${team1.trim()} ${score1.trim()} <span class="divider">⚽</span> ${score2.trim()} ${team2.trim()}</div>
-            <div class="result-info goal-scorer"><b>${team1.trim()}:</b> ${scorers1 || "-"}</div>
-            ${cards1 ? `<div class="cards">${cards1.trim()}</div>` : ""}
-            <div class="result-info goal-scorer"><b>${team2.trim()}:</b> ${scorers2 || "-"}</div>
-            ${cards2 ? `<div class="cards">${cards2.trim()}</div>` : ""}
-          `;
-          container.appendChild(card);
-        }
+      const assistBody = document.querySelector("#topAssist tbody");
+      assist.slice(0, 3).forEach(r => {
+        assistBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td></tr>`;
       });
-
-    /* ------------------- بازیکنان مؤثر ------------------- */
-    fetch(effectiveUrl)
-      .then(res => res.text())
-      .then(csv => {
-        const rows = csv.trim().split("\n").map(r => r.split(","));
-        const scorers = [], assist = [], mvp = [];
-
-        rows.forEach(r => {
-          const type = r[0].trim();
-          if (type === "گلزن") scorers.push(r);
-          else if (type === "پاسور") assist.push(r);
-          else if (type === "موثر") mvp.push(r);
-        });
-
-        const scorersBody = document.querySelector("#topScorers tbody");
-        scorers.slice(0, 3).forEach(r => {
-          scorersBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td></tr>`;
-        });
-
-        const assistBody = document.querySelector("#topAssist tbody");
-        assist.slice(0, 3).forEach(r => {
-          assistBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td></tr>`;
-        });
-
-        const mvpBody = document.querySelector("#topMVP tbody");
-        mvp.slice(0, 3).forEach(r => {
-          mvpBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td><td>${r[4]}</td></tr>`;
-        });
+      const mvpBody = document.querySelector("#topMVP tbody");
+      mvp.slice(0, 3).forEach(r => {
+        mvpBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td><td>${r[4]}</td></tr>`;
       });
+    });
 
-  </script>
+</script>
+
 </body>
 </html>
