--- a/index.html
+++ b/index.html
@@ -223,6 +223,64 @@
       font-size: 14px;
     }
 
+    /* ------------------- اسلایدر نظرات بازیکنان ------------------- */
+    .comments-slider {
+      position: relative;
+      margin: 30px auto;
+      width: 90%;
+      max-width: 600px;
+      background: #ffffff;
+      border-radius: 14px;
+      box-shadow: 0 4px 14px rgba(0,0,0,0.08);
+      padding: 30px 20px 50px;
+      text-align: center;
+    }
+    /* هر اسلاید به‌طور پیش‌فرض مخفی است */
+    .comments-slider .slide {
+      display: none;
+    }
+    /* اسلاید فعال نمایش داده می‌شود */
+    .comments-slider .slide.active {
+      display: block;
+    }
+    .comment-text {
+      font-size: 18px;
+      margin-bottom: 12px;
+      color: #333;
+    }
+    .comment-info {
+      font-size: 14px;
+      color: #666;
+    }
+    /* دکمه‌های ناوبری اسلایدر */
+    .comments-slider .nav {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 32px;
+      height: 32px;
+      background: #e0e0e0;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      color: #3f51b5;
+      font-size: 22px;
+      user-select: none;
+      transition: 0.3s;
+    }
+    .comments-slider .nav:hover {
+      background: #3f51b5;
+      color: #ffffff;
+    }
+    .comments-slider .prev {
+      left: 10px;
+    }
+    .comments-slider .next {
+      right: 10px;
+    }
+
   </style>
 </head>
 <body>
